kubernetes/apps/components/redmanager/base/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: navidrome
          image: docker.io/deluan/navidrome:0.61.1@sha256:1e1660054a856cc09f227d6929252e45a519fdb16004b464dd637f7294ca3ec1
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 4533
              name: http
              protocol: TCP
          volumeMounts:
            - name: music
              mountPath: /music
            - name: data
              mountPath: /data
            - name: tmp-cache
              mountPath: /tmp-cache

      volumes:
        - name: music
          persistentVolumeClaim:
            claimName: music
        - name: data
          persistentVolumeClaim:
            claimName: navidrome-config
        - name: tmp-cache
          emptyDir: {}
