kubernetes/apps/components/redmanager/base/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  type: ClusterIP
  selector:
    app: navidrome
  ports:
    - name: http
      port: 4533
