kubernetes/apps/components/redmanager/base/navidrome/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  annotations:
    external-dns.kubernetes.io/cloudflare-proxied: "false"
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - navidrome${ROUTE_SUFFIX}.${HOMELAB_INTERNAL_SUBDOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: navidrome
          port: 4533
